@@ -1,5 +1,7 @@
 2005-12-19  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/tuplet-bracket.cc (print): suicide if no control-points. 
+
 	* python/convertrules.py (conv): rule for number-visibility
 
 	* lily/slur-configuration.cc (score_extra_encompass): different
